--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,14 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "deploy":[
+            "@composer install",
+            "@composer update",
+            "php bin/console doctrine:database:create",
+            "php bin/console doctrine:migration:diff",
+            "php bin/console doctrine:migration:migrate",
+            "php bin/console doctrine:fixtures:load"
         ]
     },
     "conflict": {
