--- a/composer.json
+++ b/composer.json
@@ -92,8 +92,7 @@
             "@composer update",
             "php bin/console doctrine:database:create",
             "php bin/console doctrine:migration:diff",
-            "php bin/console doctrine:migration:migrate",
-            "php bin/console doctrine:fixtures:load"
+            "php bin/console doctrine:migration:migrate"
         ]
     },
     "conflict": {
