--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,6 +48,7 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/manage/promo,roles: ROLE_ADMIN }
         - { path: ^/manage/user, roles: ROLE_ADMIN }
+        - { path: ^/manage/subject, roles: ROLE_ADMIN }
         - { path: ^/manage, roles: ROLE_TEACHER }
         - { path: ^/display, roles: ROLE_STUDENT }
         - { path: ^/, roles: ROLE_USER }
